--- a/Algorithm/Algorithm.vcxproj.filters
+++ b/Algorithm/Algorithm.vcxproj.filters
@@ -1,100 +1,119 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="소스 파일">
+    <Filter Include="BaekjoonOnlineJudge">
       <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
       <Extensions>cpp;c;cc;cxx;c++;cppm;ixx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
     </Filter>
-    <Filter Include="헤더 파일">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;h++;hm;inl;inc;ipp;xsd</Extensions>
-    </Filter>
-    <Filter Include="리소스 파일">
-      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
-      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
+    <Filter Include="프로그래머스">
+      <UniqueIdentifier>{28d38c5e-6c3b-467d-b78f-4187d66af4fc}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BaekjoonOnlineJudge_3986.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="프로그래머스_올바른 괄호.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="프로그래머스_같은 숫자는 싫어.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="프로그래머스_기능개발.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="프로그래머스_프로세스.cpp">
-      <Filter>소스 파일</Filter>
+      <Filter>BaekjoonOnlineJudge</Filter>
     </ClCompile>
     <ClCompile Include="BaekjoonOnlineJudge_24060.cpp">
-      <Filter>소스 파일</Filter>
+      <Filter>BaekjoonOnlineJudge</Filter>
     </ClCompile>
     <ClCompile Include="BaekjoonOnlineJudge_1158.cpp">
-      <Filter>소스 파일</Filter>
+      <Filter>BaekjoonOnlineJudge</Filter>
     </ClCompile>
     <ClCompile Include="BaekjoonOnlineJudge_17827.cpp">
-      <Filter>소스 파일</Filter>
+      <Filter>BaekjoonOnlineJudge</Filter>
     </ClCompile>
     <ClCompile Include="BaekjoonOnlineJudge_15649.cpp">
-      <Filter>소스 파일</Filter>
+      <Filter>BaekjoonOnlineJudge</Filter>
     </ClCompile>
     <ClCompile Include="BaekjoonOnlineJudge_15650.cpp">
-      <Filter>소스 파일</Filter>
+      <Filter>BaekjoonOnlineJudge</Filter>
     </ClCompile>
     <ClCompile Include="BaekjoonOnlineJudge_15651.cpp">
-      <Filter>소스 파일</Filter>
+      <Filter>BaekjoonOnlineJudge</Filter>
     </ClCompile>
     <ClCompile Include="BaekjoonOnlineJudge_15652.cpp">
-      <Filter>소스 파일</Filter>
+      <Filter>BaekjoonOnlineJudge</Filter>
     </ClCompile>
     <ClCompile Include="BaekjoonOnlineJudge_5397.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="프로그래머스_괄호 회전하기.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="프로그래머스_다리를 지나는 트럭.cpp">
-      <Filter>소스 파일</Filter>
+      <Filter>BaekjoonOnlineJudge</Filter>
     </ClCompile>
     <ClCompile Include="BaekjoonOnlineJudge_9663.cpp">
-      <Filter>소스 파일</Filter>
+      <Filter>BaekjoonOnlineJudge</Filter>
     </ClCompile>
     <ClCompile Include="BaekjoonOnlineJudge_10814.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="프로그래머스_K번째수.cpp">
-      <Filter>소스 파일</Filter>
+      <Filter>BaekjoonOnlineJudge</Filter>
     </ClCompile>
     <ClCompile Include="BaekjoonOnlineJudge_2750.cpp">
-      <Filter>소스 파일</Filter>
+      <Filter>BaekjoonOnlineJudge</Filter>
     </ClCompile>
     <ClCompile Include="BaekjoonOnlineJudge_1920.cpp">
-      <Filter>소스 파일</Filter>
+      <Filter>BaekjoonOnlineJudge</Filter>
     </ClCompile>
     <ClCompile Include="BaekjoonOnlineJudge_10816.cpp">
-      <Filter>소스 파일</Filter>
+      <Filter>BaekjoonOnlineJudge</Filter>
     </ClCompile>
     <ClCompile Include="BaekjoonOnlineJudge_1302.cpp">
-      <Filter>소스 파일</Filter>
+      <Filter>BaekjoonOnlineJudge</Filter>
     </ClCompile>
     <ClCompile Include="BaekjoonOnlineJudge_1620.cpp">
-      <Filter>소스 파일</Filter>
+      <Filter>BaekjoonOnlineJudge</Filter>
     </ClCompile>
     <ClCompile Include="BaekjoonOnlineJudge_1316.cpp">
-      <Filter>소스 파일</Filter>
+      <Filter>BaekjoonOnlineJudge</Filter>
     </ClCompile>
     <ClCompile Include="BaekjoonOnlineJudge_1764.cpp">
-      <Filter>소스 파일</Filter>
+      <Filter>BaekjoonOnlineJudge</Filter>
     </ClCompile>
     <ClCompile Include="BaekjoonOnlineJudge_10815.cpp">
-      <Filter>소스 파일</Filter>
+      <Filter>BaekjoonOnlineJudge</Filter>
+    </ClCompile>
+    <ClCompile Include="프로그래머스_K번째수.cpp">
+      <Filter>프로그래머스</Filter>
+    </ClCompile>
+    <ClCompile Include="프로그래머스_같은 숫자는 싫어.cpp">
+      <Filter>프로그래머스</Filter>
+    </ClCompile>
+    <ClCompile Include="프로그래머스_괄호 회전하기.cpp">
+      <Filter>프로그래머스</Filter>
+    </ClCompile>
+    <ClCompile Include="프로그래머스_기능개발.cpp">
+      <Filter>프로그래머스</Filter>
+    </ClCompile>
+    <ClCompile Include="프로그래머스_다리를 지나는 트럭.cpp">
+      <Filter>프로그래머스</Filter>
+    </ClCompile>
+    <ClCompile Include="프로그래머스_올바른 괄호.cpp">
+      <Filter>프로그래머스</Filter>
     </ClCompile>
     <ClCompile Include="프로그래머스_중복된 문자 제거.cpp">
-      <Filter>소스 파일</Filter>
+      <Filter>프로그래머스</Filter>
+    </ClCompile>
+    <ClCompile Include="프로그래머스_프로세스.cpp">
+      <Filter>프로그래머스</Filter>
+    </ClCompile>
+    <ClCompile Include="BaekjoonOnlineJudge_1001.cpp">
+      <Filter>BaekjoonOnlineJudge</Filter>
+    </ClCompile>
+    <ClCompile Include="BaekjoonOnlineJudge_10818.cpp">
+      <Filter>BaekjoonOnlineJudge</Filter>
+    </ClCompile>
+    <ClCompile Include="BaekjoonOnlineJudge_1269.cpp">
+      <Filter>BaekjoonOnlineJudge</Filter>
+    </ClCompile>
+    <ClCompile Include="BaekjoonOnlineJudge_10813.cpp">
+      <Filter>BaekjoonOnlineJudge</Filter>
+    </ClCompile>
+    <ClCompile Include="BaekjoonOnlineJudge_1547.cpp">
+      <Filter>BaekjoonOnlineJudge</Filter>
+    </ClCompile>
+    <ClCompile Include="BaekjoonOnlineJudge_9935.cpp">
+      <Filter>BaekjoonOnlineJudge</Filter>
+    </ClCompile>
+    <ClCompile Include="BaekjoonOnlineJudge_2798.cpp">
+      <Filter>BaekjoonOnlineJudge</Filter>
+    </ClCompile>
+    <ClCompile Include="프로그래머스_행렬의 곱셈.cpp">
+      <Filter>프로그래머스</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
